funcionando criar e login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ server.port=${PORT:5000}
 # in them!
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://example.com:5432/database}
 spring.data.mongodb.uri=mongodb+srv://mack:mack123@cluster0.lbzdryk.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=mygrocerylist
+spring.data.mongodb.database=Biblioteca
